<resources>
    <string name="app_name">convo</string>
    <string name="preference_file_key">chrisbriant_chat_shared_prefs</string>
    <string name="enter_name">Enter Name</string>
    <string name="btn_send">Send</string>
    <string name="enter_room_text">Enter Room Name</string>
    <string name="btn_secure">Password Protect?</string>
    <string name="enter_room_password">Enter Password</string>
    <string name="btn_cancel">Cancel</string>
    <string name="txt_pw_error">Sorry the password is incorrect.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure_text">Are you sure?</string>
    <string name="edt_chat_message">Send a chat message...</string>
    <string name="btn_exit">Exit</string>
    <string name="text_members">Also in the Room:</string>
    <string name="text_messages">Messages:</string>
    <string name="enter_personal_message">Type a message</string>
    <string name="text_rooms">Rooms</string>
    <string name="title_rooms">Chat Rooms</string>
    <string name="text_enter_room_name">Create a New Room</string>
    <string name="in_room_title">You are in room:</string>
</resources>