<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".activities.RoomActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/in_room_title"
        />

    <TextView
        android:id="@+id/chatRmTxtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="4dp"
        android:gravity="center"
        android:text="@string/text_members"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRmRecycMembs"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        />

    <EditText
        android:id="@+id/chatRmEdtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edt_chat_message"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/text_messages"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRmRecycChat"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        />

    <Button
        android:id="@+id/chatRmBtnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        />

    <Button
        android:id="@+id/chatRmBtnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit"
        />

</LinearLayout>