<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RoomListActivity">

    <EditText
        android:id="@+id/rmListEdtRoomName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_room_text"
        />


    <CheckBox
        android:id="@+id/rmListChkSecure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_secure"
        android:visibility="gone"
        />


    <EditText
        android:id="@+id/rmListEdtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_room_password"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/rmListBtnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rmRecycRooms"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

</LinearLayout>