<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/pmDiagTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:text="@string/enter_personal_message"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pmDiagEdtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_personal_message"
                android:layout_below="@id/pmDiagTitle"
                />

            <TextView
                android:id="@+id/pmDiagTxtErr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_pw_error"
                android:layout_below="@id/pmDiagEdtPassword"
                android:gravity="center"
                android:textColor="@color/design_default_color_error"
                android:visibility="gone"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/pmDiagTxtErr"
                android:layout_centerInParent="true"
                android:layout_marginTop="19dp"
                >
                <Button
                    android:id="@+id/pmDiagBtnSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:text="@string/btn_send" />

                <Button
                    android:id="@+id/pmDiagBtnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/btn_cancel" />

            </LinearLayout>



        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>